<input type=number>: accept localized digits without showing them.

Locale::stripInvalidNumberCharacters() missed to call initializeLocaleData().

BUG=694391

Review-Url: https://codereview.chromium.org/2738463003
Cr-Commit-Position: refs/heads/master@{#455286}

Former-commit-id: 627d462e4a1fb99efa5d66caf6648a5cb246ffa6